remove code to import some preferences which were deprecated in GNOME 2.2.
2005-07-19  Mark McLoughlin  <mark@skynet.ie>

        * libnautilus-private/nautilus-global-preferences.c:
        (nautilus_global_preferences_init): remove code to import
        some preferences which were deprecated in GNOME 2.2.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-07-19  Mark McLoughlin  <mark@skynet.ie>
+
+	* libnautilus-private/nautilus-global-preferences.c:
+	(nautilus_global_preferences_init): remove code to import
+	some preferences which were deprecated in GNOME 2.2.
+
 2005-07-15  Vincent Noel  <vnoel@cox.net>
 
 	* src/nautilus-information-panel.c: (make_button_box),
