Updated Lithuanian translation by Justina Klingaitė and me.
2005-07-21  Žygimantas Beručka  <zygis@gnome.org>

        * lt.po: Updated Lithuanian translation by Justina Klingaitė and me.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,4 +1,8 @@
-2005-07-21 Ankit Patel <ankit644@yahoo.com>
+2005-07-21  Žygimantas Beručka  <zygis@gnome.org>
+
+	* lt.po: Updated Lithuanian translation by Justina Klingaitė and me.
+
+2005-07-21  Ankit Patel <ankit644@yahoo.com>
 
 	* gu.po: Updated Gujarati Translation.
 
