Don't use trash icon for location button delete action. Fixes #310414.
2005-07-23  Martin Wehner  <martin.wehner@gmail.com>

	* src/file-manager/fm-directory-view.c:
	Don't use trash icon for location button delete action.
	Fixes #310414.

	Patch from Christian Neumair  <chris@gnome-de.org>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2005-07-23  Martin Wehner  <martin.wehner@gmail.com>
 
+	* src/file-manager/fm-directory-view.c:
+	Don't use trash icon for location button delete action.
+	Fixes #310414.
+
+	Patch from Christian Neumair  <chris@gnome-de.org>
+
+2005-07-23  Martin Wehner  <martin.wehner@gmail.com>
+
 	* src/nautilus-desktop-window.c: (real_get_icon_name),
 	(nautilus_desktop_window_class_init):
 	* src/nautilus-navigation-window.c: (real_get_icon_name),
