--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+Major changes in 2.11.90 are:
+* Handle dnd more efficently
+* Use file-manager icon for browser windows
+* Use hover underline and cursor for single click mode
+* Make labels selectable in the sidebar
+* Improve sound preview process handling
+* UI fixes to path- and sidebar
+
 Major changes in 2.11.4 are:
 * Allow dnd of text on view to create a new file
 * show hostname in progress dialogs
