--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+=== nautilus 2.11.90 ===
+
+2005-07-25  Martin Wehner  <martin.wehner@gmail.com>
+
+	* configure.in:
+	Require eel 2.11.90 and bump version.
+
+	* NEWS: 
+	Update for release
+
 2005-07-23  Martin Wehner  <martin.wehner@gmail.com>
 
 	* src/file-manager/fm-directory-view.c:
