--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-07-25  Martin Wehner  <martin.wehner@gmail.com>
+
+	* configure.in:
+	Post release version bump.
+
 === nautilus 2.11.90 ===
 
 2005-07-25  Martin Wehner  <martin.wehner@gmail.com>
