--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-07-26  Martin Wehner  <martin.wehner@gmail.com>
+
+	* src/nautilus-pathbar.c: (get_display_name_for_folder):
+	Use the display name of the file if the uri uses a method
+	unknown to gnome-vfs (trash:). Fixes #310274.
+
 2005-07-25  Martin Wehner  <martin.wehner@gmail.com>
 
 	* configure.in:
