--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-29  Ilkka Tuohela  <hile@iki.fi>
+
+	* fi.po: Updated Finnish translation.
+
 2005-07-28  Ilkka Tuohela  <hile@iki.fi>
 
 	* fi.po: Bulk change to some Finnish translations.       
