--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-07-31  Ilkka Tuohela  <hile@iki.fi>
+
+	* fi.po: Bulk updates to Finnish translation
+             for new gnome.fi website.
+
 2005-07-31  Pawan Chitrakar  <pawan@nplinux.org>
 
 	* ne.po: Updated Nepali Translation
