Use "Reset" as reset emblem label. Fixes #311380.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-08-02  Christian Neumair  <chris@gnome-de.org>
+
+	* libnautilus-private/nautilus-customization-data.c:
+	(format_name_for_display):
+	* src/nautilus-property-browser.c: (add_reset_property):
+	Use "Reset" as reset emblem label. Fixes #311380.
+
 2005-08-01  Christian Neumair  <chris@gnome-de.org>
 
 	* src/file-manager/fm-directory-view.c: (activate_check_mime_types):
