--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-02  Adam Weinberger  <adamw@gnome.org>
+
+	* en_CA.po: Updated Canadian English translation.
+
 2005-08-01  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Translation updated.
