Initialize best_icon_size when constructing sidebar. Fixes a critical
2005-08-03  Martin Wehner  <martin.wehner@gmail.com>

	* src/nautilus-sidebar-title.c: (nautilus_sidebar_title_init):
	Initialize best_icon_size when constructing sidebar.
	Fixes a critical librsvg warning.

	Patch from Jaap Haitsma <jaap@haitsma.org>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-08-03  Martin Wehner  <martin.wehner@gmail.com>
+
+	* src/nautilus-sidebar-title.c: (nautilus_sidebar_title_init):
+	Initialize best_icon_size when constructing sidebar.
+	Fixes a critical librsvg warning.
+
+	Patch from Jaap Haitsma <jaap@haitsma.org>
+
 2005-08-02  Christian Neumair  <chris@gnome-de.org>
 
 	* libnautilus-private/nautilus-customization-data.c:
