--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2005-08-03  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* nb.po: Updated Norwegian bokmål translation.
+	* no.po: Same
+
 2005-08-03  Ankit Patel <ankit644@yahoo.com>
 
 	* gu.po: Updated Gujarati Translation.
