--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-04  Ilkka Tuohela  <hile@iki.fi>
+
+	*fi.po: Updated Finnish translation.
+
 2005-08-03  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* nb.po: Updated Norwegian bokmål translation.
