--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-04  Gabor Kelemen  <kelemeng@gnome.hu>
+
+	* hu.po: Hungarian translation updated.
+
 2005-08-04  Marcel Telka  <marcel@telka.sk>
 
 	* sk.po: Updated Slovak translation.
