--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-04  Sunil Mohan Adapa  <sunil@atc.tcs.co.in>
+
+	* configure.in: Added "te" to ALL_LINGUAS.
+
 2005-08-03  Joe Shaw  <joeshaw@novell.com>
 
 	* libnautilus-private/nautilus-metafile.c
