--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-08-05  Christian Neumair  <chris@gnome-de.org>
+
+	* src/nautilus-window.c: (nautilus_window_class_init):
+	* src/nautilus-window.h:
+	Add "reload" and "prompt-for-location" signals. Bind F5 to "reload"
+	and Alt-d to "prompt-for-location". Fixes #305252, #312353.
+
 2005-08-04  Sunil Mohan Adapa  <sunil@atc.tcs.co.in>
 
 	* configure.in: Added "te" to ALL_LINGUAS.
