Adapt to eel wrap table changes. Fixes #308996.
2005-08-05  Christian Neumair  <chris@gnome-de.org>

	* src/nautilus-property-browser.c: Adapt to eel wrap table changes.
	Fixes #308996.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2005-08-05  Christian Neumair  <chris@gnome-de.org>
 
+	* src/nautilus-property-browser.c: Adapt to eel wrap table changes.
+	Fixes #308996.
+
+2005-08-05  Christian Neumair  <chris@gnome-de.org>
+
 	* src/nautilus-window.c: (nautilus_window_class_init):
 	* src/nautilus-window.h:
 	Add "reload" and "prompt-for-location" signals. Bind F5 to "reload"
