Open the appropriate kind of window when jumping to bookmark. Fixes
2005-08-05  Martin Wehner  <martin.wehner@gmail.com>

	* src/nautilus-bookmarks-window.c: (create_bookmarks_window),
	(open_selected_bookmark): Open the appropriate kind of window when
	jumping to bookmark. Fixes #312160.

	Patch from Jaap Haitsma <jaap@haitsma.org>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-08-05  Martin Wehner  <martin.wehner@gmail.com>
+
+	* src/nautilus-bookmarks-window.c: (create_bookmarks_window),
+	(open_selected_bookmark): Open the appropriate kind of window when 
+	jumping to bookmark. Fixes #312160.
+
+	Patch from Jaap Haitsma <jaap@haitsma.org>
+
 2005-08-05  Christian Neumair  <chris@gnome-de.org>
 
 	* src/nautilus-property-browser.c: Adapt to eel wrap table changes.
