--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-06  Kostas Papadimas <pkst@gnome.org>
+	
+         * el.po Updated Greek Translation
+
 2005-08-05  Miloslav Trmac  <mitr@volny.cz>
 
 	* cs.po: Updated Czech translation.
