Updated Bulgarian translation by Rostislav Raykov <zbrox@i-space.org>
2005-08-06  Alexander Shopov  <ash@contact.bg>

	* bg.po: Updated Bulgarian translation by
	Rostislav Raykov <zbrox@i-space.org>

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,6 +1,11 @@
+2005-08-06  Alexander Shopov  <ash@contact.bg>
+
+	* bg.po: Updated Bulgarian translation by
+	Rostislav Raykov <zbrox@i-space.org>
+
 2005-08-06  Kostas Papadimas <pkst@gnome.org>
 	
-         * el.po Updated Greek Translation
+	* el.po Updated Greek Translation
 
 2005-08-05  Miloslav Trmac  <mitr@volny.cz>
 
@@ -30,7 +35,7 @@
 
 2005-08-04  Clytie Siddall <clytie@riverland.net.au>
 
-        * vi.po: Updated Vietnamese translation.
+	* vi.po: Updated Vietnamese translation.
 
 2005-08-04  Gabor Kelemen  <kelemeng@gnome.hu>
 
