--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-07  Raphael Higino  <raphaelh@cvs.gnome.org>
+
+	* pt_BR.po: Updated Brazilian Portuguese translation.
+
 2005-08-06  Mohammad DAMT  <mdamt@gnome.org>
 
 	* id.po: Updated Indonesian translation
