--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2005-08-08  Sunil Mohan Adapa  <sunil@atc.tcs.co.in>
+
+	* te.po: Updated Telugu translation done by
+	M.A.Kaleem <mohd_kallu@yahoo.co.in>
+	Shyam Kalakoti <shyam_220193@yahoo.co.in>
+
 2005-08-07  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* th.po: Updated Thai translation.
