Allow moving files within the burn location. Fixes #312085.
2005-08-08  Martin Wehner  <martin.wehner@gmail.com>

	* libnautilus-private/nautilus-file-operations.c
	(nautilus_file_operations_copy_move):
	Allow moving files within the burn location. Fixes #312085.

	Patch from William Jon McCann <mccann@jhu.edu>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-08-08  Martin Wehner  <martin.wehner@gmail.com>
+
+	* libnautilus-private/nautilus-file-operations.c
+	(nautilus_file_operations_copy_move):
+	Allow moving files within the burn location. Fixes #312085.
+
+	Patch from William Jon McCann <mccann@jhu.edu>
+
 2005-08-05  Martin Wehner  <martin.wehner@gmail.com>
 
 	* src/nautilus-bookmarks-window.c: (create_bookmarks_window),
