Don't allow renaming of the desktop folder. Closes #125637.
2005-08-09  Martin Wehner  <martin.wehner@gmail.com>

	* libnautilus-private/nautilus-file.c: (file_is_desktop),
	(nautilus_file_can_rename):
        Don't allow renaming of the desktop folder. Closes #125637.

	Patch from Christian Neumair  <chris@gnome-de.org>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2005-08-09  Martin Wehner  <martin.wehner@gmail.com>
+
+	* libnautilus-private/nautilus-file.c: (file_is_desktop),
+	(nautilus_file_can_rename):
+        Don't allow renaming of the desktop folder. Closes #125637.
+
+	Patch from Christian Neumair  <chris@gnome-de.org>
+
 2005-08-08  Martin Wehner  <martin.wehner@gmail.com>
 
 	* src/nautilus-property-browser.c:
