--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+=== nautilus 2.11.91 ===
+
+2005-08-09  Martin Wehner  <martin.wehner@gmail.com>
+
+	* configure.in:
+	Require eel 2.11.91.
+
+	* NEWS: 
+	Update for release
+
 2005-08-09  Martin Wehner  <martin.wehner@gmail.com>
 
 	* libnautilus-private/nautilus-file.c: (file_is_desktop),
