--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,14 @@
+Major changes in 2.11.91 are:
+* Don't allow renaming of the desktop folder
+* Make moves within burn:// possible
+* Fixes to property browser drag and drop code
+* Add Explorer-style keybindings
+* Add timestamps to metafiles
+* Make ESC switch back to the pathbar
+* Use saner check for mime mismatching
+* Make progress dialog minimizable
+* UI fixes
+
 Major changes in 2.11.90 are:
 * Handle dnd more efficently
 * Use file-manager icon for browser windows
