Post release version bump.
2005-08-09  Martin Wehner  <martin.wehner@gmail.com>

	* configure.in:
	Post release version bump.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-08-09  Martin Wehner  <martin.wehner@gmail.com>
+
+	* configure.in:
+	Post release version bump.
+
 === nautilus 2.11.91 ===
 
 2005-08-09  Martin Wehner  <martin.wehner@gmail.com>
