Updated Japanese translation for v2.11.91.
2005-08-09  Takeshi AIHANA <aihana@gnome.gr.jp>

	* ja.po: Updated Japanese translation for v2.11.91.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-09  Takeshi AIHANA <aihana@gnome.gr.jp>
+
+	* ja.po: Updated Japanese translation.
+
 2005-08-08  Sunil Mohan Adapa  <sunil@atc.tcs.co.in>
 
 	* te.po: Updated Telugu translation done by
