Updated Russian translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-09  Leonid Kanter <leon@asplinux.ru>
+
+	* ru.po: Updated Russian translation
+
 2005-08-09  Takeshi AIHANA <aihana@gnome.gr.jp>
 
 	* ja.po: Updated Japanese translation.
