--- a/po/ru.po
+++ b/po/ru.po
@@ -1,4 +1,3 @@
-# translation of nautilus.HEAD.po to
 # translation of nautilus to Russian
 # Copyright (C) 2000-2004, 2005 Free Software Foundation, Inc.
 # Valek Filippov <frob@df.ru>, 2000-2002.
@@ -14,7 +13,7 @@ msgstr ""
 "POT-Creation-Date: 2005-02-10 12:02+0100\n"
 "PO-Revision-Date: 2005-03-03 16:37+0200\n"
 "Last-Translator: Leonid Kanter <leon@asplinux.ru>\n"
-"Language-Team:  <ru@li.org>\n"
+"Language-Team:  <gnome-cyr@gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
