Updated Norwegian Nynorsk translation.
2005-08-10  Sigurd Gartmann  <sigurdga@europe.yahoo-inc.com>

	* nn.po: Updated Norwegian Nynorsk translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-10  Sigurd Gartmann  <sigurdga@europe.yahoo-inc.com>
+
+	* nn.po: Updated Norwegian Nynorsk translation.
+
 2005-08-09  Leonid Kanter <leon@asplinux.ru>
 
 	* ru.po: Updated Russian translation
