--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-11  Duarte Loreto <happyguy_pt@hotmail.com>
+
+	* pt.po: Updated Portuguese translation.
+
 2005-08-10  Sigurd Gartmann  <sigurdga@europe.yahoo-inc.com>
 
 	* nn.po: Updated Norwegian Nynorsk translation.
