Initialize the GDK threading system. Fixes #312894.
2005-08-12  Raffaele Sandrini  <rasa@gmx.ch>

	* src/nautilus-main.c:
	Initialize the GDK threading system. Fixes #312894.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-08-12  Raffaele Sandrini  <rasa@gmx.ch>
+
+	* src/nautilus-main.c:
+	Initialize the GDK threading system. Fixes #312894.
+
 2005-08-12  Kjartan Maraas  <kmaraas@gnome.org>
 
 	Lots of cleanups. Closes bug #313094 and bug #149714
